Fix for balau logo z-index for chrome.

--- a/src/doc/resources/css/balau.css
+++ b/src/doc/resources/css/balau.css
@@ -49,6 +49,8 @@ h3 {
 	padding: 1em 0;
 	margin: 0 24px !important;
 	float: left;
+	position: relative;
+	z-index: 10;
 }
 
 #balau-logo > a {
